[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "easy_langchain_rag"
version = "0.0.3"
authors = [
    { name = "Eugene Mutuyimana", email = "eugenemutuyimana15@gmail.com" },
]
description = "easy_langchain_rag is a Python package designed to simplify the setup and management of LangChain and LangGraph-based applications."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/yoojen/easy_langchain_rag"
Issues = "https://github.com/yoojen/easy_langchain_rag/issues"
